# secret-gift-swap-builder

./: Cargo.toml  Dioxus.toml  fly.toml  index.html  input.css  netlify.toml
assets/: main.css
src/: lib.rs  main.rs
src/components/: add_giver.rs  add_giver_button.rs  app.rs  guest_form.rs  guest_list.rs  guest_list_item.rs  list_output.rs  mod.rs  modals.rs
