[package]
name = "secret-satan"
version = "0.1.0"
authors = ["Kenneth Love <kennethlove@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }
rand = { version = "0.8.5"}

# Debug
dioxus-logger = "0.5.1"
