[package]
name = "secret-satan"
version = "0.1.0"
authors = ["Kenneth Love <kennethlove@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }
gloo-storage = "0.3.0"
rand = { version = "0.8.5"}
serde = { version = "1.0.125", features = ["derive"] }

# Debug
dioxus-logger = "0.5.1"

[dependencies.getrandom]
version = "0.2.3"
features = ["js"]

[dependencies.wasm-bindgen]
version = "0.2.96"

